<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    style="@style/Activity.MainChild"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="@dimen/activity_vertical_margin"
    android:layout_marginEnd="@dimen/activity_horizontal_margin"
    android:layout_marginLeft="@dimen/activity_horizontal_margin"
    android:layout_marginRight="@dimen/activity_horizontal_margin"
    android:layout_marginStart="@dimen/activity_horizontal_margin"
    android:layout_marginTop="@dimen/activity_vertical_margin">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/course_administration_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/course_title" />

        <EditText
            android:id="@+id/course_administration_start_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/course_administration_name"
            android:hint="@string/course_start_date"
            android:inputType="date" />

        <EditText
            android:id="@+id/course_administration_end_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/course_administration_name"
            android:layout_toEndOf="@+id/course_administration_start_date"
            android:layout_toRightOf="@+id/course_administration_start_date"
            android:hint="@string/course_end_date"
            android:inputType="date" />

        <EditText
            android:id="@+id/course_administration_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/course_administration_start_date"
            android:hint="@string/course_description" />

        <TextView
            android:id="@+id/course_administration_students"
            style="@style/Drawer.CourseMembers"
            android:text="@string/student_groups_marker"
            android:layout_below="@id/course_administration_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/course_administration_subjects"
            style="@style/Drawer.CourseMembers"
            android:text="@string/subjects_marker"
            android:layout_below="@id/course_administration_students"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/course_administration_holidays"
            style="@style/Drawer.CourseMembers"
            android:text="@string/holidays_marker"
            android:layout_below="@id/course_administration_subjects"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/course_administration_events"
            style="@style/Drawer.CourseMembers"
            android:text="@string/events_marker"
            android:layout_below="@id/course_administration_holidays"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </RelativeLayout>
</ScrollView>