<?xml version="1.0" encoding="utf-8"?>
<com.suicune.teachershelpbook.views.events.NewEventView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/new_event_dialog"
    android:orientation="vertical"
    android:layout_margin="16dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/title"
        android:hint="@string/new_event_name_hint"
        android:layout_gravity="center_horizontal"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/description"
        android:hint="@string/new_event_description_hint"
        android:layout_gravity="center_horizontal"/>

    <RelativeLayout
        android:layout_margin="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/start_tag"
            android:text="@string/start_date_time_tag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"/>
        <TextView
            android:id="@+id/end_tag"
            android:text="@string/end_date_time_tag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"/>
        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/start_date"
            android:inputType="date"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_below="@id/start_tag"/>
        <ImageView
            android:id="@+id/start_date_icon"
            android:src="@android:drawable/ic_menu_my_calendar"
            android:contentDescription="@string/choose_date_dialog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/start_date"
            android:layout_toEndOf="@+id/start_date"
            android:layout_below="@id/start_tag" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/end_date"
            android:inputType="date"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_below="@id/end_tag"/>
        <ImageView
            android:id="@+id/end_date_icon"
            android:src="@android:drawable/ic_menu_my_calendar"
            android:contentDescription="@string/choose_date_dialog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toLeftOf="@+id/end_date"
            android:layout_toStartOf="@+id/end_date"
            android:layout_below="@id/end_tag"/>

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/start_time"
            android:inputType="time"
            android:layout_below="@id/start_date"/>
        <ImageView
            android:id="@+id/start_time_icon"
            android:src="@android:drawable/ic_menu_my_calendar"
            android:contentDescription="@string/choose_date_dialog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/start_time"
            android:layout_toEndOf="@+id/start_time"
            android:layout_below="@id/start_date"/>

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/end_time"
            android:inputType="time"
            android:layout_below="@id/end_date"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"/>
        <ImageView
            android:id="@+id/end_time_icon"
            android:src="@android:drawable/ic_menu_my_calendar"
            android:contentDescription="@string/choose_date_dialog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toLeftOf="@+id/end_time"
            android:layout_toStartOf="@+id/end_time"
            android:layout_below="@id/end_date"/>

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/full_day_checkbox"
            android:layout_marginTop="8dp"
            android:layout_gravity="center_horizontal"
            android:layout_below="@id/start_time"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/full_day_event_checkbox"
            android:layout_toRightOf="@id/full_day_checkbox"
            android:layout_toEndOf="@id/full_day_checkbox"
            android:layout_below="@id/start_time"/>
    </RelativeLayout>

</com.suicune.teachershelpbook.views.events.NewEventView>